# django-ecommerce

./: .gitignore  README.md  new.json  pyproject.toml  requirements.txt
apps/ecommerce/migrations/: 0001_initial.py
apps/inventory/: apps.py  models.py
apps/inventory/migrations/: 0001_initial.py  0002_alter_category_name_alter_category_slug.py  0003_alter_category_parent.py
apps/shop/: admin.py  models.py  views.py
apps/shop/migrations/: 0001_initial.py  0002_alter_product_index_together_remove_product_category_and_more.py
apps/shop/tests/: test_models.py
config/: settings.py
