[tool.poetry]
name = "project_name"
version = "0.1.0"
description = "A simple django ecommerce application"
authors = ["Louis Agyapong <agyapong.louis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.3"
django-debug-toolbar = "^3.2"
isort = "^5.7.0"
djangorestframework = "^3.13"
flake8 = "^3.9.0"
dj-database-url = "^0.5.0"
python-decouple = "^3.4"
Pillow = "^8.4.0"
coverage = "^6.0.2"
django-mptt = "^0.13.4"
psycopg2-binary = "^2.9.3"
pytest-django = "^4.5.2"
pytest-factoryboy = "^2.1.0"
pytest-selenium = "^2.0.1"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
django-extensions = "^3.1.0"
black = "^20.8b1"
mypy = "^0.790"
pywatchman = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
